chore: update renovate config to add assignes + vulnerabilityAlerts

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -9,6 +9,17 @@
     "renovate",
     "maintenance"
   ],
+  "assignees": [
+    "@trm217",
+    "@jstcki"
+  ],
+  "vulnerabilityAlerts": {
+    "labels": [
+      "renovate",
+      "maintenance",
+      "security"
+    ]
+  },
   "packageRules": [
     {
       "enabled": false,
